[kibiter] Use Bitergia logo during the Kibiter splash screen during loading and in the top navbar
For the splash screen the SVG logo is:

bitergia/outreach/marketing/images/logos/bitergia-logo-fonts-outlined-v2_backup.svg

In order to use the SVG logo it must be included as SVG data inside the HTML page.
For doing this it has been converted to base64 with the command:

base64 -w 0 /home/acs/devel/kibiter/src/core_plugins/kibana/public/assets/bitergia-logo-w.svg

This is the base64 string found inside the CSS jade templates in kibanaWelcomeLogo attribute.

--- a/src/ui/public/chrome/directives/global_nav/global_nav.html
+++ b/src/ui/public/chrome/directives/global_nav/global_nav.html
@@ -9,21 +9,21 @@
     <a href="{{ getHref('/app/kibana#/dashboard/Overview') }}">
       <li
         ng-if="!logoBrand && !smallLogoBrand"
-        aria-label="GrimoireLab Logo"
+        aria-label="Bitergia Logo"
         class="logo kibana"
       ></li>
 
       <li
         ng-if="logoBrand"
         ng-style="{ 'background': logoBrand }"
-        aria-label="GrimoireLab Logo"
+        aria-label="Bitergia Logo"
         class="logo hidden-sm"
       ></li>
 
       <li
         ng-if="smallLogoBrand"
         ng-style="{ 'background': smallLogoBrand }"
-        aria-label="GrimoireLab Logo"
+        aria-label="Bitergia Logo"
         class="logo-small visible-sm hidden-xs"
       ></li>
       <li
